crates/aonix/tests/data/invalid/arity_and_three_inputs.aoncir
[format]
format_version = "1.0.0"
encoding       = "utf-8"

[meta]
name           = "and_with_three_inputs_should_be_rejected"
version        = "1.0.0"
parameters     = {}
level          = 3
status         = "experimental"

[[ports.inputs]]
name         = "operand_a"
semantic_tag = "data_bit"
group        = ""

[[ports.inputs]]
name         = "operand_b"
semantic_tag = "data_bit"
group        = ""

[[ports.inputs]]
name         = "operand_c"
semantic_tag = "data_bit"
group        = ""

[[ports.outputs]]
name         = "data_output"
semantic_tag = "data_bit"
group        = ""

[[signals]]
id = "data_output_internal"

[[gates]]
id     = "g_and3"
kind   = "AND"
inputs = ["operand_a", "operand_b", "operand_c"]
output = "data_output_internal"

[[outputs]]
port   = "data_output"
source = "data_output_internal"
